fix: 收紧公开路由并完善应用就绪探针